welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:3: error: type mismatch;
 found   : Unit
 required: Int
 for ((v, i) <- nums.zipWithIndex){
             ^